# org.webosinternals.service.upstartmgr

./: CMakeLists.txt  Makefile  luna_methods.c  org.webosinternals.upstartmgr  org.webosinternals.upstartmgr.service  upstartmgr.c  upstartmgr.h
control/: postinst  prerm
files/launch/: org.webosinternals.service.upstartmgr.in  org.webosinternals.upstartmgr.in
files/sysbus/: org.webosinternals.service.upstartmgr.json.pub.in  org.webosinternals.service.upstartmgr.service.pub.in  org.webosinternals.upstartmgr.json.prv  org.webosinternals.upstartmgr.service.prv
upstart/: org.webosinternals.upstartmgr
